# vacdm-plugin

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/actions/conan/: action.yml
.github/actions/release/: action.yml
.github/actions/tests/: action.yml
.github/actions/version/: action.yml  version_handler.py
.github/tasks/: version.yml
.github/workflows/: build-develop.yml  build-develop2.yml  build-main.yml  build-release.yml  clang-format.yml  get-latest-version.yml  version_handler.py
src/log/: Logger.h
src/tests/: CMakeLists.txt
src/tests/utils/: test_StringUtils.cpp
src/types/: Pilot.h
